[patch] update cli for nov patch

--- a/docs/catalogs/v9-251127-s390x.md
+++ b/docs/catalogs/v9-251127-s390x.md
@@ -13,7 +13,7 @@ Details
 What's New
 -------------------------------------------------------------------------------
 
-- OCP **4.19** Support
+- MongoDB **8.0.13** Support
 - **Security updates and bug fixes**
     - IBM Maximo Application Suite Core Platform v9.0 and v9.1
     - IBM Maximo Manage v9.0 and v9.1
@@ -76,18 +76,6 @@ IBM Maximo Application Suite customers receive a standard Red Hat OpenShift Cont
     <td>June 27, 2024</td>
     <td>December 27, 2025</td>
     <td>June 27, 2027</td>
-  </tr>
-  <tr>
-    <td class="firstColumn">4.15</td>
-    <td>February 27, 2024</td>
-    <td>August 27, 2025</td>
-    <td>N/A</td>
-  </tr>
-  <tr>
-    <td class="firstColumn">4.14</td>
-    <td>October 31, 2023</td>
-    <td>May 1, 2025</td>
-    <td>October 31, 2026</td>
   </tr>
 </table>
 
