--- a/docs/catalogs/v9-251127-amd64.md
+++ b/docs/catalogs/v9-251127-amd64.md
@@ -20,9 +20,9 @@ What's New
     - IBM Maximo IoT v8.7, v8.8, v9.0 and v9.1
     - IBM Maximo Manage v8.6, v8.7, v9.0 and v9.1
     - IBM Maximo Monitor v8.10, v8.11, v9.0 and v9.1
-    - IBM Maximo Optimizer v8.4, v8.5, v9.0 and v9.1
+    - IBM Maximo Optimizer v9.1
     - IBM Maximo Assist v9.1 and v9.0
-    - IBM Maximo Predict v8.9, v8.8, v9.0 and v9.1
+    - IBM Maximo Predict 
     - IBM Maximo Visual Inspection  v8.9 and v9.0
     - IBM Maximo Real Estate and Facilities v9.1
 
