[patch] add catalog docs

--- a/docs/catalogs/v9-251127-ppc64le.md
+++ b/docs/catalogs/v9-251127-ppc64le.md
@@ -119,20 +119,20 @@ The following packages from the `registry.redhat.io/redhat/redhat-operator-index
 
 
 ### IBM Maximo Application Suite
-| Package        | Default Channel   | Channel       | Latest Version                                                              |
-|----------------|-------------------|---------------|-----------------------------------------------------------------------------|
-| ibm-mas        | 9.1.x             | 9.2.x-feature | [9.2.0-pre.stable-2456](packages/ibm-mas/9.2.0-pre.stable-2456.md)          |
-|                |                   | 9.1.x         | [9.1.5](packages/ibm-mas/9.1.5.md)                                          |
-|                |                   | 9.0.x         | [9.0.16](packages/ibm-mas/9.0.16.md)                                        |
-| ibm-mas-manage | 9.1.x             | 9.2.x-feature | [9.2.0-pre.stable-14287](packages/ibm-mas-manage/9.2.0-pre.stable-14287.md) |
-|                |                   | 9.1.x         | [9.1.5](packages/ibm-mas-manage/9.1.5.md)                                   |
-|                |                   | 9.0.x         | [9.0.18](packages/ibm-mas-manage/9.0.18.md)                                 |
+| Package        | Default Channel   | Channel       | Latest Version                                                            |
+|----------------|-------------------|---------------|---------------------------------------------------------------------------|
+| ibm-mas        | 9.1.x             | 9.2.x-feature | [9.2.0-pre.stable-4447](packages/ibm-mas/9.2.0-pre.stable-4447.md)        |
+|                |                   | 9.1.x         | [9.1.6](packages/ibm-mas/9.1.6.md)                                        |
+|                |                   | 9.0.x         | [9.0.17](packages/ibm-mas/9.0.17.md)                                      |
+| ibm-mas-manage | 9.1.x             | 9.2.x-feature | [9.2.0-pre.stable-4817](packages/ibm-mas-manage/9.2.0-pre.stable-4817.md) |
+|                |                   | 9.1.x         | [9.1.6](packages/ibm-mas-manage/9.1.6.md)                                 |
+|                |                   | 9.0.x         | [9.0.19](packages/ibm-mas-manage/9.0.19.md)                               |
 
 ### IBM Utilities
 | Package            | Default Channel   | Channel   | Latest Version                                |
 |--------------------|-------------------|-----------|-----------------------------------------------|
-| ibm-sls            | 3.x               | 3.x       | [3.12.2](packages/ibm-sls/3.12.2.md)          |
-| ibm-truststore-mgr | 1.x               | 1.x       | [1.7.1](packages/ibm-truststore-mgr/1.7.1.md) |
+| ibm-sls            | 3.x               | 3.x       | [3.12.3](packages/ibm-sls/3.12.3.md)          |
+| ibm-truststore-mgr | 1.x               | 1.x       | [1.7.2](packages/ibm-truststore-mgr/1.7.2.md) |
 
 ### IBM Cloud Pak Foundational Services
 | Package   | Default Channel   | Channel   | Latest Version   |
@@ -145,8 +145,10 @@ The following packages from the `registry.redhat.io/redhat/redhat-operator-index
 ### IBM Db2 Universal Operator
 | Package       | Default Channel   | Channel   | Latest Version                                     |
 |---------------|-------------------|-----------|----------------------------------------------------|
-| db2u-operator | v110509.0         | v7.4      | [7.3.2](packages/db2u-operator/7.3.2.md)           |
+| db2u-operator | v110509.0         | v7.5      | [7.5.0](packages/db2u-operator/7.5.0.md)           |
+|               |                   | v7.4      | [7.3.2](packages/db2u-operator/7.3.2.md)           |
 |               |                   | v7.3      | [7.3.0](packages/db2u-operator/7.3.0.md)           |
+|               |                   | v7.2      | [7.2.0](packages/db2u-operator/7.2.0.md)           |
 |               |                   | v7.1      | [7.1.0](packages/db2u-operator/7.1.0.md)           |
 |               |                   | v6.1      | [6.1.0](packages/db2u-operator/6.1.0.md)           |
 |               |                   | v6.0      | [6.0.0](packages/db2u-operator/6.0.0.md)           |
@@ -164,19 +166,10 @@ The following packages from the `registry.redhat.io/redhat/redhat-operator-index
 |               |                   | v2.2      | [2.2.0](packages/db2u-operator/2.2.0.md)           |
 |               |                   | v2.1      | [2.1.0](packages/db2u-operator/2.1.0.md)           |
 |               |                   | v2.0      | [2.0.0](packages/db2u-operator/2.0.0.md)           |
+|               |                   | v120102.0 | [120102.0.1](packages/db2u-operator/120102.0.1.md) |
+|               |                   | v120101.0 | [120101.0.1](packages/db2u-operator/120101.0.1.md) |
+|               |                   | v120100.0 | [120100.0.0](packages/db2u-operator/120100.0.0.md) |
 |               |                   | v110509.0 | [110509.0.6](packages/db2u-operator/110509.0.6.md) |
 |               |                   | v110508.0 | [110508.0.3](packages/db2u-operator/110508.0.3.md) |
 |               |                   | v1.1      | [1.1.13](packages/db2u-operator/1.1.13.md)         |
 |               |                   | v1.0      | [1.0.11](packages/db2u-operator/1.0.11.md)         |
-
-### IBM AppConnect
-| Package   | Default Channel   | Channel   | Latest Version   |
-|-----------|-------------------|-----------|------------------|
-
-### Eclipse Amlen
-| Package   | Default Channel   | Channel   | Latest Version   |
-|-----------|-------------------|-----------|------------------|
-
-### Open Data Hub
-| Package   | Default Channel   | Channel   | Latest Version   |
-|-----------|-------------------|-----------|------------------|
