[patch] update cli for nov patch (#1923)

--- a/docs/catalogs/v9-251127-amd64.md
+++ b/docs/catalogs/v9-251127-amd64.md
@@ -14,15 +14,15 @@ Details
 What's New
 -------------------------------------------------------------------------------
 
-- OCP **4.19** Support
+- MongoDB **8.0.13** Support
 - **Security updates and bug fixes**
     - IBM Maximo Application Suite Core Platform v8.10, v8.11, v9.0 and v9.1
     - IBM Maximo IoT v8.7, v8.8, v9.0 and v9.1
     - IBM Maximo Manage v8.6, v8.7, v9.0 and v9.1
     - IBM Maximo Monitor v8.10, v8.11, v9.0 and v9.1
-    - IBM Maximo Optimizer v8.4, v8.5, v9.0 and v9.1
+    - IBM Maximo Optimizer v9.1
     - IBM Maximo Assist v9.1 and v9.0
-    - IBM Maximo Predict v8.9, v8.8, v9.0 and v9.1
+    - IBM Maximo Predict 
     - IBM Maximo Visual Inspection  v8.9 and v9.0
     - IBM Maximo Real Estate and Facilities v9.1
 
@@ -95,18 +95,6 @@ IBM Maximo Application Suite customers receive a standard Red Hat OpenShift Cont
     <td>December 27, 2025</td>
     <td>June 27, 2027</td>
   </tr>
-  <tr>
-    <td class="firstColumn">4.15</td>
-    <td>February 27, 2024</td>
-    <td>August 27, 2025</td>
-    <td>N/A</td>
-  </tr>
-  <tr>
-    <td class="firstColumn">4.14</td>
-    <td>October 31, 2023</td>
-    <td>May 1, 2025</td>
-    <td>October 31, 2026</td>
-  </tr>
 </table>
 
 
@@ -145,7 +133,7 @@ For more information on Cloud Pak for Data's support policy review this [IBM Clo
 
 MongoDB Compatibility
 -------------------------------------------------------------------------------
-This catalog is certified compatible with MongoDB **[v6.0](https://www.mongodb.com/docs/v6.0/)** and **[v7.0](https://www.mongodb.com/docs/v7.0/)**, this applies to both MongoDB Community Edition (CE) and MongoDB Enterprise Edition (EE).
+This catalog is certified compatible with MongoDB **[v7.0](https://www.mongodb.com/docs/v7.0/)** and **[v8.0](https://www.mongodb.com/docs/v8.0/)**, this applies to both MongoDB Community Edition (CE) and MongoDB Enterprise Edition (EE).
 
 By default an in-cluster MongoDb (CE) instance will be created when you install MAS, using the [MongoDB Community Kubernetes Operator](https://github.com/mongodb/mongodb-kubernetes-operator); however MAS supports use with any type of MongoDb instance, including but not limited to the following hosted solutions:
 
