[patch] add update catalog docs

--- a/docs/catalogs/v9-251127-amd64.md
+++ b/docs/catalogs/v9-251127-amd64.md
@@ -14,17 +14,18 @@ Details
 What's New
 -------------------------------------------------------------------------------
 
-- MongoDB **8.0.13** Support
+- MongoDb v8 support Running mas update will automatically upgrade existing MongoDbCommunity instances to MongoDb version 8. This upgrade is compatible with all MAS versions included in this catalog.
+- End of support for Openshift Container Platform 4.14 and 4.15, which are both now out of support (Since May 1 2025 and August 27 2025 respectively).
 - **Security updates and bug fixes**
     - IBM Maximo Application Suite Core Platform v8.10, v8.11, v9.0 and v9.1
-    - IBM Maximo IoT v8.7, v8.8, v9.0 and v9.1
     - IBM Maximo Manage v8.6, v8.7, v9.0 and v9.1
+    - IBM Maximo IoT v8.7, v8.8, v9.0 and v9.1
     - IBM Maximo Monitor v8.10, v8.11, v9.0 and v9.1
     - IBM Maximo Optimizer v9.1
     - IBM Maximo Assist v9.1 and v9.0
-    - IBM Maximo Predict 
-    - IBM Maximo Visual Inspection  v8.9 and v9.0
+    - IBM Maximo Visual Inspection v8.9, v9.0 and v9.1
     - IBM Maximo Real Estate and Facilities v9.1
+    - IBM Maximo AI Service v9.1
 
 !!! important
     MAS 8.10 and 8.11 standard support and software updates end on 30th April 2026, to ensure you are able to continue to receive monthly security updates and bug fixes we advise all customers to begin making upgrade plans for MAS 9.0 if you have not already done so.
