--- a/docs/catalogs/v9-251127-s390x.md
+++ b/docs/catalogs/v9-251127-s390x.md
@@ -13,10 +13,10 @@ Details
 What's New
 -------------------------------------------------------------------------------
 
-- MongoDB **8.0.13** Support
+- End of support for Openshift Container Platform 4.14 and 4.15, which are both now out of support (Since May 1 2025 and August 27 2025 respectively).
 - **Security updates and bug fixes**
-    - IBM Maximo Application Suite Core Platform v9.0 and v9.1
-    - IBM Maximo Manage v9.0 and v9.1
+    - IBM Maximo Application Suite Core Platform v8.10, v8.11, v9.0 and v9.1
+    - IBM Maximo Manage v8.6, v8.7, v9.0 and v9.1
 
 Manual Installation
 -------------------------------------------------------------------------------
