[doc] updated doc in 27th nov release FIPS enabled don't upgrade MREF to 9.1.5

--- a/docs/catalogs/v9-251127-amd64.md
+++ b/docs/catalogs/v9-251127-amd64.md
@@ -35,6 +35,7 @@ Known Issues
 -------------------------------------------------------------------------------
 - Customers using **Maximo Assist v8.7 or v8.8** should not update and must instead contact IBM Support for guidance regarding the removal of IBM Watson Discovery and upgrading to Maximo Assist v9.0
 - If you have the Workday Connector installed and are upgrading from Manage 8.7.24 Multi-IS to Manage 9.0.17 (Online/Offline mode), it is advised to bypass this Patch 9.0.17 release due to a recently encountered error on build and await the subsequent patch release for 9.0.18. If you need to apply this patch, we can offer a Limited Availability Fix (LA Fix) in the event you encounter this issue. Please note that you will need to submit a LA Fix request for this.
+- Customers using FIPS should not upgrade their MREF to 9.1.5, since it has problems during initialization.
 
 Manual Installation
 -------------------------------------------------------------------------------
