--- a/docs/catalogs/v9-251224-ppc64le.md
+++ b/docs/catalogs/v9-251224-ppc64le.md
@@ -6,7 +6,7 @@ Details
 <table>
   <tr><td>Image</td><td>icr.io/cpopen/ibm-maximo-operator-catalog</tr></tr>
   <tr><td>Tag</td><td>v9-251224-ppc64le</tr></tr>
-  <tr><td>Digest</td><td>need-to-update</tr></tr>
+  <tr><td>Digest</td><td>sha256:fb422cc0c95537fcb3abd100c8bf500c69eba722ad2199a3c32c1143404bd39f</tr></tr>
 </table>
 
 What's New
@@ -35,7 +35,7 @@ spec:
   publisher: IBM
   description: Static Catalog Source for IBM Maximo Application Suite
   sourceType: grpc
-  image: icr.io/cpopen/ibm-maximo-operator-catalog@need-to-update
+  image: icr.io/cpopen/ibm-maximo-operator-catalog@sha256:fb422cc0c95537fcb3abd100c8bf500c69eba722ad2199a3c32c1143404bd39f
   priority: 90
 ```
 
