--- a/docs/catalogs/v9-251224-s390x.md
+++ b/docs/catalogs/v9-251224-s390x.md
@@ -6,7 +6,7 @@ Details
 <table>
   <tr><td>Image</td><td>icr.io/cpopen/ibm-maximo-operator-catalog</tr></tr>
   <tr><td>Tag</td><td>v9-251224-s390x</tr></tr>
-  <tr><td>Digest</td><td>need-to-update</tr></tr>
+  <tr><td>Digest</td><td>sha256:11c1b7766456a4bf277725e67aa8fb606f2e9d7f11d6b192cb02a67ad20c9d7a</tr></tr>
 </table>
 
 
@@ -36,7 +36,7 @@ spec:
   publisher: IBM
   description: Static Catalog Source for IBM Maximo Application Suite
   sourceType: grpc
-  image: icr.io/cpopen/ibm-maximo-operator-catalog@need-to-update
+  image: icr.io/cpopen/ibm-maximo-operator-catalog@sha256:11c1b7766456a4bf277725e67aa8fb606f2e9d7f11d6b192cb02a67ad20c9d7a
 ```
 
 
